<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:id="@+id/relativeLayout">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@raw/expense"
        android:id="@+id/imageview"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="250dp"
            android:background="@drawable/add_shop_edittext"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/hint_name" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center">


        <EditText
            android:id="@+id/editText_salary"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_salary"
            android:layout_marginLeft="10dp"
            android:inputType="number"
            android:singleLine="true"
            android:padding="10dp"
            android:background="@drawable/add_shop_edittext"
            android:windowSoftInputMode="adjustResize" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear all data"
            android:id="@+id/checkbox"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:background="@drawable/btn_bg"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_bg"
            android:textColor="@color/colorWhite"
            />
    </LinearLayout>




</LinearLayout>